force-app/main/default/objects/Donation__c/fields/Blankets_Needed__c.field-meta.xml
<CustomField>
    <fullName>Blankets_Needed__c</fullName>
    <formula>if(Inventory__r.Blankets_and_Towels__c &lt; 20,
   20 - Inventory__r.Blankets_and_Towels__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blankets Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>