force-app/main/default/objects/Donation__c/fields/Chew_Toys__c.field-meta.xml
<CustomField>
    <fullName>Chew_Toys__c</fullName>
    <label>Toys to Donate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>