force-app/main/default/objects/Donation__c/fields/Crates_Needed__c.field-meta.xml
<CustomField>
    <fullName>Crates_Needed__c</fullName>
    <formula>if(Inventory__r.Crates__c&lt; 20,
   20 - Inventory__r.Crates__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crates Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>