force-app/main/default/objects/Donation__c/fields/Crates_to_Donate__c.field-meta.xml
<CustomField>
    <fullName>Crates_to_Donate__c</fullName>
    <label>Crates to Donate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>