force-app/main/default/objects/Donation__c/fields/Donator_Name__c.field-meta.xml
<CustomField>
    <fullName>Donator_Name__c</fullName>
    <label>Donator Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>