force-app/main/default/objects/Donation__c/fields/Food_Needed__c.field-meta.xml
<CustomField>
    <fullName>Food_Needed__c</fullName>
    <formula>if(Inventory__r.Food_Bag__c &lt; 50,
   50 -  Inventory__r.Food_Bag__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Food Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>