force-app/main/default/objects/Donation__c/fields/Food_to_Donate__c.field-meta.xml
<CustomField>
    <fullName>Food_to_Donate__c</fullName>
    <label>Food to Donate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>