force-app/main/default/objects/Donation__c/fields/Towels_Needed__c.field-meta.xml
<CustomField>
    <fullName>Towels_Needed__c</fullName>
    <formula>if(Inventory__r.Paper_Towels__c &lt; 100,
   100 -  Inventory__r.Paper_Towels__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Towels Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>