force-app/main/default/objects/Donation__c/fields/Toys_Needed__c.field-meta.xml
<CustomField>
    <fullName>Toys_Needed__c</fullName>
    <formula>if(Inventory__r.Chew_Toys__c &lt; 40,
   40 -  Inventory__r.Chew_Toys__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Toys Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>